# prompt-bench

./: .gitignore  README.md  README_CN.md  pyproject.toml  requirements.txt
prompt_bench/: __init__.py  cli.py  core.py
