[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-bench"
version = "1.0.0"
description = "Benchmark and compare LLM prompts across different providers"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Alex-2Code", email = "alex@example.com"}
]
keywords = ["llm", "prompt", "benchmark", "openai", "anthropic", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
prompt-bench = "prompt_bench.cli:main"

[project.urls]
Homepage = "https://github.com/Alex-2Code/prompt-bench"
Repository = "https://github.com/Alex-2Code/prompt-bench"
Issues = "https://github.com/Alex-2Code/prompt-bench/issues"
